# mpsp

./: README.md  pyproject.toml
src/mpsp/: __init__.py
src/mpsp/base_socket/: __init__.py
src/mpsp/mps/: __init__.py
