[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mpsp"
version = "0.0.2"
authors = [
  { name="std46d6b", email="dev@m5k.ru" },
]
description = "mpsp protocol"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/smlp6d/mpsp"
"Bug Tracker" = "https://github.com/smlp6d/mpsp/issues"
